@@ -153,7 +153,7 @@ create table hadoop_write_2(
             d double,
             m map<string, string>,
             bb array<struct<a: int, b: string>>)
-            row format serde 'org/apache/hcatalog/data/JsonSerDe'
+            row format serde 'org.apache.hcatalog.data.JsonSerDe'
             stored as textfile;\
                                 ,'hadoop' => q\
 jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.WriteJson -libjars :HCAT_JAR: :THRIFTSERVER: all100kjson hadoop_write_2
@@ -171,11 +171,7 @@ create table hadoop_write_3(
             name string,
             age int,
             gpa double)
-stored as rcfile
-TBLPROPERTIES (
-    'hcat.isd'='org.apache.hcatalog.rcfile.RCFileInputDriver',
-    'hcat.osd'='org.apache.hcatalog.rcfile.RCFileOutputDriver'
-);
+stored as rcfile;
 \,
                                 ,'hadoop' => q\
 jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.WriteRC -libjars :HCAT_JAR: :THRIFTSERVER: all100krc hadoop_write_3
