@@ -164,10 +164,8 @@ create table pig_write_2(
             d double,
             m map<string, string>,
             bb array<struct<a: int, b: string>>)
-            STORED AS INPUTFORMAT 'org.apache.hadoop.mapred.TextInputFormat' OUTPUTFORMAT 'org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat'
-            INPUTDRIVER 'org.apache.hcatalog.pig.drivers.LoadFuncBasedInputDriver' OUTPUTDRIVER 'org.apache.hcatalog.pig.drivers.StoreFuncBasedOutputDriver'
-            TBLPROPERTIES ('hcat.pig.loader'='org.apache.pig.builtin.JsonLoader', 'hcat.pig.storer'='org.apache.pig.builtin.JsonStorage', 'hcat.pig.loader.args'=
-'s:chararray, i:int, d:double, m:map[chararray], bb:{t:(a:int, b:chararray)}', 'hcat.pig.args.delimiter'='	');
+            row format serde 'org.apache.hcatalog.data.JsonSerDe'
+            STORED AS TEXTFILE;
 \
                                 ,'pig' => q\a = load 'all100kjson' using org.apache.hcatalog.pig.HCatLoader();
 b = foreach a generate s, i, d;
@@ -184,11 +182,7 @@ create table pig_write_3(
             name string,
             age int,
             gpa double)
-stored as rcfile
-TBLPROPERTIES (
-    'hcat.isd'='org.apache.hcatalog.rcfile.RCFileInputDriver',
-    'hcat.osd'='org.apache.hcatalog.rcfile.RCFileOutputDriver'
-);
+stored as rcfile;
 \
                                 ,'pig' => q\a = load 'all100krc' using org.apache.hcatalog.pig.HCatLoader();
 b = foreach a generate name, age;
