@@ -39,6 +39,8 @@ Trunk (unreleased changes)
   HCAT-2 Support nested schema conversion between Hive an Pig (julienledem via hashutosh)
 
   IMPROVEMENTS
+  HCAT-243 HCat e2e tests need to change to not use StorageDrivers (gaets)
+
   HCAT-256 HCatalog should provide its classpath to tools (gates)
 
   HCAT-266 Upgrade HBase dependency to 0.92. (thw via toffer)
